# fastapi-cursor-boilerplate

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  env.example  pyproject.toml
.cursor/rules/: api-design-and-implementation.mdc  architectural-and-structural-rules.mdc  testing-and-security.mdc
app/: __init__.py  main.py
app/api/v1/: api.py
app/api/v1/endpoints/: example.py  health.py
app/core/: config.py  logging.py
app/db/: __init__.py
app/services/: health_service.py
